--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "react-icons": "^4.10.1",
     "react-kakao-link": "^0.1.2",
     "react-material-ui-carousel": "^3.4.2",
-    "react-router-dom": "^6.14.1",
+    "react-router-dom": "^6.14.2-pre.0",
     "react-scripts": "5.0.1",
     "react-scroll-to-bottom": "^4.2.0",
     "react-slick": "^0.29.0",
